<resources>
    <string name="app_name">PopularMoviesStage2</string>

    <string name="error_message">There was a problem with loading data! check your connection and try again</string>

    <string name="no_internet_message">No Internet Connection!</string>

    <string name="no_reviews_message">This movie has no reviews</string>

    <string name="no_favorite_movies_message">You have no favorite movies </string>

    <string name="no_network_connection_message"> no reviews available, check your connection and try again  </string>

    <string name="no_trailers_message">no trailers available , check your connection and try again </string>

    <string name="details_activity">Details</string>

    <string name="popularity"> Most Popular</string>

    <string name="high_rated">Highest Rated</string>

    <string name="favorites">My Favorites</string>

    <string name="rate_label">Rate : </string>

    <string name="sort_by_popular">popular</string>

    <string name="sort_by_top_rated">top_rated</string>

    <string name="expand">view more&#8230;</string>
    <string name="collapse">collapse</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="overview">Overview</string>
    <string name="favorites_icon">Favorites Icon</string>
    <string name="date_icon">Date Icon</string>
    <string name="poster_image">Poster Image</string>

</resources>
