<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movies_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_error_message_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/primary_text_dark"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/error_message"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/tv_no_internet_message_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/primary_text_dark"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="center"
        android:text="@string/no_internet_message"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/tv_no_favorite_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/primary_text_dark"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="center"
        android:text="@string/no_favorite_movies_message"
        android:visibility="invisible"
        />

    <ProgressBar
        android:id="@+id/loading_indicator_pb"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        />

</FrameLayout>