<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="4dp"
            app:cardElevation="7dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPaddingBottom="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/poster_image"
                    android:id="@+id/show_poster_iv"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:background="@android:color/darker_gray"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scaleType="centerCrop" />


                <TextView
                    android:id="@+id/rate_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/show_poster_iv"
                    android:paddingStart="30dp"
                    android:paddingTop="@dimen/rate_labels_top_and_bottom_padding"
                    android:paddingEnd="@dimen/rate_labels_left_and_right_padding"
                    android:paddingBottom="@dimen/rate_labels_top_and_bottom_padding"
                    android:text="@string/rate_label"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/primary_text_dark" />

                <TextView
                    android:id="@+id/show_rate_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/rate_label"
                    android:gravity="center"
                    android:paddingTop="@dimen/rate_labels_top_and_bottom_padding"
                    android:paddingBottom="@dimen/rate_labels_top_and_bottom_padding"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    tools:text="5.5" />

                <ImageView
                    android:contentDescription="@string/date_icon"
                    android:id="@+id/date_label"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_below="@+id/rate_label"
                    android:layout_alignStart="@+id/rate_label"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/icon_realse_time" />

                <TextView
                    android:id="@+id/show_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_rate_tv"
                    android:layout_alignStart="@+id/date_label"
                    android:layout_marginStart="25dp"
                    android:layout_toEndOf="@+id/date_label"
                    android:paddingLeft="20dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"/>

                <ImageButton
                    android:contentDescription="@string/favorites_icon"
                    android:id="@+id/like_Button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/icon_unfavorite" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_show_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height=".7dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/overview" />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="4dp"
            app:cardElevation="7dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="4dp"
            app:contentPaddingBottom="0dp">

            <TextView
                android:id="@+id/tv_show_movie_overView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"/>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height=".7dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_trailers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trailers_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_no_trailers_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/primary_text_dark"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_trailers_message"
            android:visibility="invisible" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".7dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviews_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_no_reviews_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/primary_text_dark"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_reviews_message"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/tv_no_network_connection_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/primary_text_dark"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_network_connection_message"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>